# FMTC_F1TENTH_EDU

bags/slam/: metadata.yaml
f1tenth_stack/config/: f1tenth_online_async.yaml  joy_teleop.yaml  pf_rviz.rviz  sensors.yaml  slam_rviz.rviz  vesc.yaml
f1tenth_stack/launch/: bringup_launch.py  localize_launch.py  slam_launch.py  wallfollow_launch.py
follow_the_gap/: setup.py
follow_the_gap/follow_the_gap/: follow_the_gap_node.py  follow_the_gap_node_skel.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: package.sh
install/f1tenth_stack/share/f1tenth_stack/: package.sh
install/follow_the_gap/lib/follow_the_gap/: follow_the_gap  test_lidar
install/follow_the_gap/share/follow_the_gap/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joy_teleop/share/joy_teleop/: package.sh
install/key_teleop/share/key_teleop/: package.sh
install/mouse_teleop/share/mouse_teleop/: package.sh
install/safety_node/lib/safety_node/: safety_node
log/: latest_build
particle_filter/config/: localize.yaml
particle_filter/maps/: hallway_0422_1.pgm  hallway_0422_1.yaml
particle_filter/particle_filter/: particle_filter.py
pure_pursuit/: package.xml  setup.py
pure_pursuit/launch/: pure_pursuit.py
pure_pursuit/pure_pursuit/: pure_pursuit_node.py
safety_node/src/: safety_node.cpp
scripts/: generate_path.py
wall_follow/: package.xml
wall_follow/wall_follow/: wall_follow_node.py  wall_follow_node_skel.py
(+30 files in other folders)
