<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.0.1</version>
  <description>Pure Pursuit Controller Node for ROS 2 (F1TENTH)</description>
  <maintainer email="junha308@snu.ac.kr">Junha_Kim</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf-transformations</depend>
  <depend>numpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
